--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -171,7 +171,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "from scipy.stats import t\n",
     "def independent_ttest(dataframe, type):\n",
     "    mean1, mean2 = np.mean(dataframe['Condition 1']), np.mean(dataframe['Condition 2'])\n",
@@ -243,9 +242,9 @@
     "for df in [df1, df2, df3, df4, df5]:\n",
     "    _, p = f_test(df)\n",
     "    if p < f_test_alpha:\n",
-    "        print(ttest_ind(df['Condition 1'], df['Condition 2'], equal_var=False)) # Welch t\n",
+    "        print(ttest_ind(df['Condition 1'], df['Condition 2'], equal_var=False)) # Welch's t test\n",
     "    else: \n",
-    "        print(ttest_ind(df['Condition 1'], df['Condition 2'], equal_var=True)) # Standard t"
+    "        print(ttest_ind(df['Condition 1'], df['Condition 2'], equal_var=True)) # Standard t test"
    ]
   },
   {
