Added some changes

--- a/Assignment 2/assignment2.ipynb
+++ b/Assignment 2/assignment2.ipynb
@@ -201,7 +201,7 @@
   },
   {
    "source": [
-    "#### Using Bartlett's test\n",
+    "### Using Bartlett's test\n",
     "Alternatively, one can also use Levene's test to check for homoscedasticity, but Bartlett's is more robust when the data is fairly normal."
    ],
    "cell_type": "markdown",
