--- a/Assignment 1/assignment1.ipynb
+++ b/Assignment 1/assignment1.ipynb
@@ -27,6 +27,13 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "## Entering the original data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -69,6 +76,15 @@
    ]
   },
   {
+   "source": [
+    "## Computing Pearson CLassification Factor\n",
+    "\n",
+    "_Note: The moments here are not standardized, I have computed them as they were defined in my course. For general moment analyses, use standardized forms._"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -93,6 +109,13 @@
     "\n",
     "print(f\"Pearson Classification Factor: {pcf}\")"
    ]
+  },
+  {
+   "source": [
+    "## Entering the Indices to be used in CLT"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -129,6 +152,15 @@
     "idx = idx.rename(columns= lambda s:'C'+ str(s))\n",
     "idx"
    ]
+  },
+  {
+   "source": [
+    "## Creating a Normal Sample Using Central Limit Theorem\n",
+    "\n",
+    "We use CLT to get a normal sample as the Student's theorem can only be used while sampling from a normal dataset. "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -168,6 +200,13 @@
    ]
   },
   {
+   "source": [
+    "## Anderson-Darling Test for Normality"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
@@ -187,6 +226,14 @@
     "else:\n",
     "    print(\"Sampled distribution is NOT normal\")"
    ]
+  },
+  {
+   "source": [
+    "## Finding Mean and Variance Ranges using Student's t Theorem\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
