--- a/Assignment 1/assignment1.ipynb
+++ b/Assignment 1/assignment1.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "source": [
-    "## Computing Pearson CLassification Factor\n",
+    "## Computing Pearson Classification Factor\n",
     "\n",
     "_Note: The moments here are not standardized, I have computed them as they were defined in my course. For general moment analyses, use standardized forms._"
    ],
