--- a/Julia/Assignment1/assignment1.ipynb
+++ b/Julia/Assignment1/assignment1.ipynb
@@ -443,7 +443,7 @@
     "    idx = convert(Array, row)\n",
     "    push!(sample, sum(data[idx])/length(data[idx]))\n",
     "end\n",
-    "StatsPlots.plot(qqnorm(sample, qqline = :R)) # NQQ Plot should give a straight line is the data is normally distributed"
+    "StatsPlots.plot(qqnorm(sample, qqline = :R)) # NQQ Plot should give a straight line if the data is normally distributed"
    ]
   },
   {
